# haskell-snake-learn

./: .gitignore  BSLog  CHANGELOG.md  LICENSE  README.md  Seed-Events  brick-tutorial.cabal  brick-tutorial.nix  default.nix  flake.nix  highscores.db  shell.nix  snake_server_auth.crt  snake_server_auth.key  ziy5klrcvb3zhr76lr1rqxrsds2yg56d-source.nix
app/: Main.hs  messing-around.hs
app/Game/: Main.hs
app/Server/: Main.hs
src/: GameLogic.hs  Snake.hs  SnakeApp.hs  UI.hs
src/DB/: Authenticate.hs  Client.hs  Highscores.hs  Receive.hs  Scotty.hs  Send.hs  Servant.hs  Server.hs  Types.hs
src/Database/: Highscores.hs
src/Logging/: Logger.hs  Replay.hs  ServerLogger.hs  worksheet.hs
src/Networking/: TLS.hs
src/Options/: Options.hs
src/UI/: DialogDemo.hs  Gameplay.hs  HighscoreScreens.hs  HighscoreScreens.hs.bak  Keybinds.hs  MainMenu.hs  Options.hs  ReplayPlayer.hs  Types.hs  Vpdemo.hs
