cabal-version:   3.0
name:            brick-tutorial
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tobi Oloke
maintainer:      toloke@yahoo.co.uk
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SnakeApp, 
                      GameLogic, 
                      UI.Gameplay, 
                      UI.HighscoreScreens, 
                      UI.MainMenu,
                      UI.ReplayPlayer, 
                      DB.Client,
                      DB.Highscores, 
                      DB.Server,
                      UI.Keybinds, 
                      Logging.Logger,
                      Logging.Replay,
                      Networking.TLS
    build-depends:    base >= 4.10 && < 5,
                      async,
                      bimap,
                      binary,
                      bluefin,
                      vty,
                      vty-crossplatform,
                      brick,
                      bytestring,
                      containers,
                      linear,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      network,
                      random,
                      mtl,
                      nonempty-containers^>=0.3.4.5,
                      network-simple-tls,
                      scotty,
                      sqlite-simple,
                      stm,
                      time,
                      text,
                      tls,
                      vector,
                      websockets,
                      word-wrap,
                      wuss

    hs-source-dirs:   src
    default-language: Haskell2010

executable snake-game
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial,
        brick,
        vty,
        vty-crossplatform

    hs-source-dirs:   app/Game
    ghc-options: -O2 -threaded -rtsopts 
    default-language: Haskell2010

executable snake-server
    import:     warnings
    main-is:    Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial
    
    hs-source-dirs: app/Server
    ghc-options: -O2 -threaded -rtsopts 
    default-language: Haskell2010

test-suite brick-tutorial-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial

