cabal-version:   3.0
name:            brick-tutorial
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tobi Oloke
maintainer:      toloke@yahoo.co.uk
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SnakeApp, 
                      GameLogic, 
                      UI.Gameplay, 
                      UI.HighscoreScreens, 
                      UI.MainMenu,
                      UI.ReplayPlayer,
                      UI.Keybinds,
                      UI.Options, 
                      UI.Types,
                      Options.Options,
                      DB.Authenticate, 
                      DB.Client,
                      DB.Highscores,
                      DB.Receive,
                      DB.Scotty,
                      DB.Server,
                      DB.Send,
                      DB.Types,
                      Logging.Logger,
                      Logging.Replay,
                      Logging.ServerLogger
    build-depends:    data-default ^>=0.8.0.1,
                      base >= 4.10 && < 5,
                      array,
                      async,
                      bimap,
                      binary,
                      bluefin,
                      crypton-x509,
                      crypton-x509-system,
                      crypton-x509-store,
                      vty,
                      vty-crossplatform,
                      brick,
                      bytestring,
                      containers,
                      data-default-class,
                      http-media,
                      http-client,
                      http-types,
                      io-streams,
                      io-streams-haproxy,
                      linear,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      network,
                      mtl,
                      nonempty-containers^>=0.3.4.5,
                      network-simple-tls,
                      random==1.3.1,
                      scotty,
                      servant-server,
                      splitmix,
                      sqlite-simple,
                      stm,
                      time,
                      tomland,
                      text,
                      tls,
                      utf8-string,
                      vector,
                      warp,
                      wreq,
                      word-wrap
    hs-source-dirs:   src
    default-language: Haskell2010

executable snake-game
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial,
        brick,
        vty,
        vty-crossplatform

    hs-source-dirs:   app/Game
    ghc-options: 
        -O2 
        -threaded
    default-language: Haskell2010

executable snake-server
    import:     warnings
    main-is:    Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial
    
    hs-source-dirs: app/Server
    ghc-options: 
        -threaded
        -O2
    default-language: Haskell2010

test-suite brick-tutorial-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.10 && < 5,
        brick-tutorial

